--- a/GameofThrones/Base.lproj/Main.storyboard
+++ b/GameofThrones/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kG1-uL-Qzb">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,17 +10,16 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Presenter-->
+        <!--Game of Thrones | Kings-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="GOTPresenter" customModule="GameofThrones" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Game of Thrones | Kings" id="BYZ-38-t0r" customClass="GOTPresenter" customModule="GameofThrones" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="200" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Jch-lQ-WeP">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="200" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Jch-lQ-WeP">
                                 <rect key="frame" x="0.0" y="32" width="375" height="603"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="GOTCell" id="87M-Ue-NIU" customClass="GOTBattleCell" customModule="GameofThrones" customModuleProvider="target">
@@ -38,10 +37,10 @@
                                                     </constraints>
                                                 </imageView>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="HuJ-2e-sO7">
-                                                    <rect key="frame" x="100" y="44" width="275" height="110"/>
+                                                    <rect key="frame" x="100" y="44" width="245" height="120"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Joffery/Tomren tyt" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7G9-id-Xgk">
-                                                            <rect key="frame" x="0.0" y="0.0" width="275" height="30"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="245" height="30"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="30" id="qln-pL-qd7"/>
                                                             </constraints>
@@ -50,51 +49,51 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="RYv-ge-XUF">
-                                                            <rect key="frame" x="0.0" y="50" width="275" height="20"/>
+                                                            <rect key="frame" x="0.0" y="50" width="245" height="30"/>
                                                             <subviews>
                                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Ratings" translatesAutoresizingMaskIntoConstraints="NO" id="eEu-4a-7hJ">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
                                                                     <constraints>
-                                                                        <constraint firstAttribute="width" constant="20" id="smW-5C-Oxa"/>
+                                                                        <constraint firstAttribute="width" constant="30" id="smW-5C-Oxa"/>
                                                                     </constraints>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="435" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mgI-CU-yb0">
-                                                                    <rect key="frame" x="30" y="0.0" width="245" height="20"/>
+                                                                    <rect key="frame" x="40" y="0.0" width="205" height="30"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="20" id="1Gj-w6-Dp0"/>
+                                                                <constraint firstAttribute="height" constant="30" id="1Gj-w6-Dp0"/>
                                                             </constraints>
                                                         </stackView>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="Pyx-1L-HxI">
-                                                            <rect key="frame" x="0.0" y="90" width="275" height="20"/>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Pyx-1L-HxI">
+                                                            <rect key="frame" x="0.0" y="100" width="245" height="20"/>
                                                             <subviews>
                                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Win" translatesAutoresizingMaskIntoConstraints="NO" id="cNo-lr-o5E">
                                                                     <rect key="frame" x="0.0" y="0.0" width="30" height="20"/>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="17" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cEH-CA-BFG">
-                                                                    <rect key="frame" x="57" y="0.0" width="17" height="20"/>
+                                                                    <rect key="frame" x="51" y="0.0" width="17" height="20"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Attack" translatesAutoresizingMaskIntoConstraints="NO" id="lop-ye-YiL">
-                                                                    <rect key="frame" x="100.5" y="0.0" width="30" height="20"/>
+                                                                    <rect key="frame" x="88.5" y="0.0" width="30" height="20"/>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="17" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r5D-u6-XyH">
-                                                                    <rect key="frame" x="157.5" y="0.0" width="17" height="20"/>
+                                                                    <rect key="frame" x="139.5" y="0.0" width="17" height="20"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Defence" translatesAutoresizingMaskIntoConstraints="NO" id="FWJ-Gu-Kro">
-                                                                    <rect key="frame" x="201" y="0.0" width="30" height="20"/>
+                                                                    <rect key="frame" x="177" y="0.0" width="30" height="20"/>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="17" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="laV-rx-Y77">
-                                                                    <rect key="frame" x="258" y="0.0" width="17" height="20"/>
+                                                                    <rect key="frame" x="228" y="0.0" width="17" height="20"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -108,9 +107,9 @@
                                                 </stackView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="HuJ-2e-sO7" secondAttribute="trailing" id="MhJ-9M-Pqu"/>
+                                                <constraint firstItem="HuJ-2e-sO7" firstAttribute="leading" secondItem="z1y-8k-rBT" secondAttribute="leading" constant="100" id="5TW-CS-bYJ"/>
+                                                <constraint firstAttribute="trailing" secondItem="HuJ-2e-sO7" secondAttribute="trailing" constant="30" id="MhJ-9M-Pqu"/>
                                                 <constraint firstItem="qbq-IX-3ba" firstAttribute="centerY" secondItem="z1y-8k-rBT" secondAttribute="centerY" id="O7I-qH-26W"/>
-                                                <constraint firstItem="HuJ-2e-sO7" firstAttribute="leading" secondItem="z1y-8k-rBT" secondAttribute="leading" constant="100" id="VuM-tL-TKc"/>
                                                 <constraint firstItem="HuJ-2e-sO7" firstAttribute="top" secondItem="z1y-8k-rBT" secondAttribute="top" constant="44" id="tbs-lY-iI2"/>
                                                 <constraint firstItem="qbq-IX-3ba" firstAttribute="leading" secondItem="z1y-8k-rBT" secondAttribute="leading" constant="20" id="tka-R7-aoe"/>
                                             </constraints>
@@ -126,14 +125,40 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="Jch-lQ-WeP" secondAttribute="top" constant="32" id="cVN-5Z-kV4"/>
+                            <constraint firstItem="Jch-lQ-WeP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="dkJ-Ia-kx5"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Jch-lQ-WeP" secondAttribute="trailing" id="pK8-qb-wD8"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Jch-lQ-WeP" secondAttribute="bottom" constant="32" id="t3x-ct-TQT"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="UAA-sz-v16"/>
                     <connections>
                         <outlet property="contentTable" destination="Jch-lQ-WeP" id="IcG-Id-wbB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="972" y="33.733133433283363"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="MSX-Pq-2GU">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kG1-uL-Qzb" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="87g-hU-ISi">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="YSP-Gt-UHA"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jut-qD-rhF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="29.600000000000001" y="692.20389805097454"/>
         </scene>
     </scenes>
     <resources>
