Changes for getting all kings

--- a/GameofThrones/Base.lproj/Main.storyboard
+++ b/GameofThrones/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                 <rect key="frame" x="0.0" y="32" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="GOTCell" id="87M-Ue-NIU" customClass="GOTBattleCell" customModule="GameofThrones" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="GOTCell" id="87M-Ue-NIU" customClass="GOTBattleCell" customModule="GameofThrones" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="200"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="87M-Ue-NIU" id="z1y-8k-rBT">
@@ -37,7 +37,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="HuJ-2e-sO7">
-                                                    <rect key="frame" x="100" y="44" width="212" height="120"/>
+                                                    <rect key="frame" x="100" y="44" width="212" height="125"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Joffery/Tomren tyt" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7G9-id-Xgk">
                                                             <rect key="frame" x="0.0" y="0.0" width="212" height="30"/>
@@ -68,39 +68,39 @@
                                                                 <constraint firstAttribute="height" constant="30" id="1Gj-w6-Dp0"/>
                                                             </constraints>
                                                         </stackView>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Pyx-1L-HxI">
-                                                            <rect key="frame" x="0.0" y="100" width="212" height="20"/>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Pyx-1L-HxI">
+                                                            <rect key="frame" x="0.0" y="100" width="212" height="25"/>
                                                             <subviews>
-                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Win" translatesAutoresizingMaskIntoConstraints="NO" id="cNo-lr-o5E">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="30" height="20"/>
+                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="Win" translatesAutoresizingMaskIntoConstraints="NO" id="cNo-lr-o5E">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="30" height="25"/>
                                                                 </imageView>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="17" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cEH-CA-BFG">
-                                                                    <rect key="frame" x="44" y="0.0" width="17" height="20"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="17" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cEH-CA-BFG">
+                                                                    <rect key="frame" x="45" y="0.0" width="17" height="25"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Attack" translatesAutoresizingMaskIntoConstraints="NO" id="lop-ye-YiL">
-                                                                    <rect key="frame" x="75.5" y="0.0" width="30" height="20"/>
+                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="Attack" translatesAutoresizingMaskIntoConstraints="NO" id="lop-ye-YiL">
+                                                                    <rect key="frame" x="77" y="0.0" width="30" height="25"/>
                                                                 </imageView>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="17" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r5D-u6-XyH">
-                                                                    <rect key="frame" x="119.5" y="0.0" width="17" height="20"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="17" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r5D-u6-XyH">
+                                                                    <rect key="frame" x="122" y="0.0" width="17" height="25"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Defence" translatesAutoresizingMaskIntoConstraints="NO" id="FWJ-Gu-Kro">
-                                                                    <rect key="frame" x="151" y="0.0" width="30" height="20"/>
+                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="Defence" translatesAutoresizingMaskIntoConstraints="NO" id="FWJ-Gu-Kro">
+                                                                    <rect key="frame" x="154" y="0.0" width="30" height="25"/>
                                                                 </imageView>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="17" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="laV-rx-Y77">
-                                                                    <rect key="frame" x="195" y="0.0" width="17" height="20"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="17" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="laV-rx-Y77">
+                                                                    <rect key="frame" x="199" y="0.0" width="13" height="25"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="20" id="F79-mS-ZcH"/>
+                                                                <constraint firstAttribute="height" constant="25" id="F79-mS-ZcH"/>
                                                             </constraints>
                                                         </stackView>
                                                     </subviews>
@@ -117,6 +117,7 @@
                                         <connections>
                                             <outlet property="headerImageView" destination="qbq-IX-3ba" id="aBf-A0-LXV"/>
                                             <outlet property="imageView" destination="qbq-IX-3ba" id="MEW-xf-LJv"/>
+                                            <outlet property="imagesStackView" destination="Pyx-1L-HxI" id="Gfa-n7-6st"/>
                                             <outlet property="nameLabel" destination="7G9-id-Xgk" id="Jqe-3J-UDi"/>
                                             <outlet property="rankLabel" destination="mgI-CU-yb0" id="62z-Hb-Mtp"/>
                                             <segue destination="VuS-dS-95w" kind="push" id="7cc-4v-C4h"/>
@@ -169,14 +170,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TTm-j4-2Ff">
-                                <rect key="frame" x="67" y="104" width="240" height="174"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Lannister" translatesAutoresizingMaskIntoConstraints="NO" id="TTm-j4-2Ff">
+                                <rect key="frame" x="142.5" y="104" width="90" height="90"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="174" id="UNd-gx-Q2f"/>
+                                    <constraint firstAttribute="height" constant="90" id="UNd-gx-Q2f"/>
+                                    <constraint firstAttribute="width" constant="90" id="pHh-ea-deU"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="ic7-yB-iiP">
-                                <rect key="frame" x="0.0" y="288" width="355" height="200"/>
+                                <rect key="frame" x="0.0" y="204" width="355" height="200"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="U1U-Yw-ewj">
                                         <rect key="frame" x="0.0" y="0.0" width="355" height="36"/>
@@ -274,9 +276,8 @@
                             <constraint firstItem="ic7-yB-iiP" firstAttribute="leading" secondItem="UCH-Sj-nJL" secondAttribute="leading" id="2KP-El-A3K"/>
                             <constraint firstItem="ic7-yB-iiP" firstAttribute="top" secondItem="TTm-j4-2Ff" secondAttribute="bottom" constant="10" id="EOv-G6-dvw"/>
                             <constraint firstItem="TTm-j4-2Ff" firstAttribute="top" secondItem="UCH-Sj-nJL" secondAttribute="top" constant="40" id="LbW-uE-2TG"/>
-                            <constraint firstItem="TTm-j4-2Ff" firstAttribute="leading" secondItem="UCH-Sj-nJL" secondAttribute="leading" constant="67" id="NrN-Bd-hMH"/>
+                            <constraint firstItem="TTm-j4-2Ff" firstAttribute="centerX" secondItem="UCH-Sj-nJL" secondAttribute="centerX" id="M6Y-ap-sB2"/>
                             <constraint firstItem="UCH-Sj-nJL" firstAttribute="trailing" secondItem="ic7-yB-iiP" secondAttribute="trailing" constant="20" id="oYy-zd-2Ug"/>
-                            <constraint firstItem="UCH-Sj-nJL" firstAttribute="trailing" secondItem="TTm-j4-2Ff" secondAttribute="trailing" constant="68" id="vkr-G4-j0O"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="UCH-Sj-nJL"/>
                     </view>
